--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
 
 					<div class="section-title">
 
-						<div class="container">
+						<div class="container mb-2">
 							<div class="row">
 								<div class="col-md-8 col-md-offset-2">
 
@@ -310,15 +310,7 @@
 								</div><!-- .col-md-8 end -->
 							</div><!-- .row end -->
 						</div><!-- .container end -->
-
-					</div><!-- .section-title end -->
-
-					<div class="portfolio-top"></div>
-					<div class="section-title">
-
-
-
-						<div class="portfolio-items-wrap">
+						<div class="portfolio-items-wrap mt-5">
 
 							<div class="container">
 								<div class="row">
@@ -391,9 +383,10 @@
 								</div><!-- .row end -->
 							</div><!-- .container-fluid end -->
 
-						</div><!-- .portfolio-items-wrap end -->
+						</div>
+					</div><!-- .section-title end -->
 
-					</div><!-- .section-content end -->
+					
 
 				</div><!-- .flat-section end -->
 
