--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
 							<div class="row">
 								<div class="col-md-12 mb-5">
 									<h2 class="mb-0">Our Exquisite Tours</h2>
-									<p>Highlight the unique features of your tours, such as curated itineraries, luxury
+									<p class="ft-18">Highlight the unique features of your tours, such as curated itineraries, luxury
 										accommodations, and personalized experiences.</p>
 								</div>
 
