tc page changes

--- a/cancellation-policy.html
+++ b/cancellation-policy.html
@@ -63,14 +63,14 @@
 								<!-- <span>Landing Template</span> -->
 							</a><!-- .logo end -->
 
-							<ul id="main-menu" class="main-menu">
+							<!-- <ul id="main-menu" class="main-menu">
 								<li><a data-scroll-nav="0" href="index.html">Home</a></li>
 								<li><a data-scroll-nav="1" href="#our-services">About Us</a></li>
 								<li><a data-scroll-nav="2" href="#popular-packages">Tours</a></li>
 								<li><a data-scroll-nav="3" href="#best-events">Destinations</a></li>
 
 								<li><a data-scroll-nav="6" href="#get-connected">Contact</a></li>
-							</ul>
+							</ul> -->
 							<!-- <a class="header-btn btn small colorful hover-dark" href="#" data-payment_button_id="pl_O2lzQNhUdKknGD">Pay Online</a> -->
 							<form class="payment-form">
 								<script src="https://checkout.razorpay.com/v1/payment-button.js"
